fixed spacing between image names

--- a/css/CSM.css
+++ b/css/CSM.css
@@ -16,7 +16,7 @@ h1, h2 {
 body {
     margin: auto;
     padding: 0;
-    max-width: 1440px;
+    /* max-width: 1440px; */
     height: 100vh;
 }
 
@@ -63,6 +63,13 @@ nav a {
     display: block;
     color: var(--color-white);
     padding: 10px 20px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #A7E237;
+    /* border: 0.5px solid var(--color-lime); */
+    /* box-shadow: 1px 0px 15px white; */
 }
 
 .hamburger-icon {
@@ -73,7 +80,6 @@ nav a {
 
 footer {
     background: var(--color-green);
-    /* background: linear-gradient(rgb(0, 0, 0, 0.3), rgb(0, 0, 0, 0.3)), center/100%; */
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -207,7 +213,7 @@ footer {
 }
 
 .exhibition-button {
-    background: linear-gradient(rgb(0, 0, 0, 0.3), rgb(0, 0, 0, 0.3)), center/80% url("/images/scientific-2040795_1280-min.jpg");
+    background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), center/80% url("/images/scientific-2040795_1280-min.jpg");
     background-repeat: none;
     background-size: cover;
 }
